--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" type="image" href="icon.png">
-    <title>Word Matcher</title>
+    <title>Letter Matcher</title>
     <style>
         *{
             margin: 0;
